[gd_scene load_steps=40 format=3 uid="uid://dwevnyt0qm5uq"]

[ext_resource type="Script" uid="uid://bew3nh6j1e3fr" path="res://lizard.gd" id="1_ejxs3"]
[ext_resource type="Texture2D" uid="uid://l3yuwumu3tv" path="res://assets/Tiny Swords (Enemy Pack)/Enemy Pack/Lizard/Lizard_Attack.png" id="2_asej3"]
[ext_resource type="Texture2D" uid="uid://dhw1nu12tnmje" path="res://assets/Tiny Swords (Enemy Pack)/Enemy Pack/Lizard/Lizard_Idle.png" id="3_irq0c"]
[ext_resource type="Texture2D" uid="uid://bdt33itmu4el6" path="res://assets/Tiny Swords (Enemy Pack)/Enemy Pack/Lizard/Lizard_Run.png" id="4_n2btm"]
[ext_resource type="Texture2D" uid="uid://nhgxbxw66t5g" path="res://assets/Tiny Swords (Enemy Pack)/Enemy Pack/Lizard/Lizard_Hit.png" id="5_nd12o"]
[ext_resource type="AudioStream" uid="uid://bnkislt7l3rbe" path="res://sound/sword_1.mp3" id="6_iomem"]
[ext_resource type="AudioStream" uid="uid://dp1hcsxoshld4" path="res://sound/sword_2.mp3" id="7_c0ee7"]
[ext_resource type="AudioStream" uid="uid://of58qb6stoma" path="res://sound/sword_3.mp3" id="8_pj8ea"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2hs7i"]
radius = 19.0263

[sub_resource type="AtlasTexture" id="AtlasTexture_thmbw"]
atlas = ExtResource("2_asej3")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtuqi"]
atlas = ExtResource("2_asej3")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_f57rb"]
atlas = ExtResource("2_asej3")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyajx"]
atlas = ExtResource("2_asej3")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pj1u"]
atlas = ExtResource("2_asej3")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4ihe"]
atlas = ExtResource("2_asej3")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnobn"]
atlas = ExtResource("2_asej3")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfdos"]
atlas = ExtResource("2_asej3")
region = Rect2(1344, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_js0rd"]
atlas = ExtResource("2_asej3")
region = Rect2(1536, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_15j1w"]
atlas = ExtResource("3_irq0c")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc430"]
atlas = ExtResource("3_irq0c")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjsgv"]
atlas = ExtResource("3_irq0c")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_47uu3"]
atlas = ExtResource("3_irq0c")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjrpb"]
atlas = ExtResource("3_irq0c")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w56n"]
atlas = ExtResource("3_irq0c")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1pwy"]
atlas = ExtResource("3_irq0c")
region = Rect2(1152, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6337a"]
atlas = ExtResource("4_n2btm")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcdnj"]
atlas = ExtResource("4_n2btm")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5loqq"]
atlas = ExtResource("4_n2btm")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_d52e7"]
atlas = ExtResource("4_n2btm")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_u336k"]
atlas = ExtResource("4_n2btm")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_skmls"]
atlas = ExtResource("4_n2btm")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8r256"]
atlas = ExtResource("5_nd12o")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp41e"]
atlas = ExtResource("5_nd12o")
region = Rect2(192, 0, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_80kka"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_thmbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtuqi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f57rb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyajx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pj1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4ihe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnobn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfdos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_js0rd")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_15j1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc430")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjsgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47uu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjrpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w56n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1pwy")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6337a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcdnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5loqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d52e7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u336k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skmls")
}],
"loop": true,
"name": &"move",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8r256")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp41e")
}],
"loop": false,
"name": &"spit",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c4a2y"]
radius = 40.0
height = 106.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mjlnl"]
radius = 40.3469
height = 80.6937

[sub_resource type="CircleShape2D" id="CircleShape2D_ffkmt"]
radius = 339.001

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p65d4"]
radius = 67.0
height = 134.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5egws"]
random_pitch = 1.41
random_volume_offset_db = 1.0
streams_count = 3
stream_0/stream = ExtResource("6_iomem")
stream_1/stream = ExtResource("7_c0ee7")
stream_2/stream = ExtResource("8_pj8ea")

[node name="Lizard" type="CharacterBody2D"]
script = ExtResource("1_ejxs3")

[node name="BodyCollider" type="CollisionShape2D" parent="."]
position = Vector2(-1, 22)
shape = SubResource("CircleShape2D_2hs7i")
debug_color = Color(0, 0.647416, 0.21166, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -16)
scale = Vector2(1.17188, 1.17188)
sprite_frames = SubResource("SpriteFrames_80kka")
animation = &"attack"
frame = 5
frame_progress = 0.601552

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(2, -14)
shape = SubResource("CapsuleShape2D_c4a2y")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(2, -15)
rotation = 1.5708
scale = Vector2(1.71017, 2.00227)
shape = SubResource("CapsuleShape2D_mjlnl")
disabled = true
debug_color = Color(0.997585, 0, 0.162644, 0.42)

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2(155, 0)
shape = SubResource("CircleShape2D_ffkmt")

[node name="Enemy_in_range" type="Area2D" parent="."]
position = Vector2(-2, 0)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_in_range"]
position = Vector2(15, -14)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_p65d4")

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 70
lifetime = 0.5
one_shot = true
explosiveness = 0.76
lifetime_randomness = 0.48
emission_shape = 1
emission_sphere_radius = 15.0
direction = Vector2(-0.3, -1)
initial_velocity_min = 201.1
initial_velocity_max = 330.23
scale_amount_min = 2.0
scale_amount_max = 4.0
color = Color(0.745098, 0.2, 0.141176, 1)
hue_variation_max = 0.4

[node name="sfx_attack" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_5egws")
volume_db = -15.0
pitch_scale = 1.5
max_polyphony = 2

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="area_shape_entered" from="Hurtbox" to="." method="_on_hurtbox_area_shape_entered"]
